--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,26 @@
 /*  your css code here. If applicable */
+table {
+    width: 50%;
+    border-collapse: separate;
+    border-spacing: 10px;
+    margin: auto;
+}
+
+th, td {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 0.5rem;
+    text-align: center;
+}
+
+th {
+    font-weight: bold;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: #f2f2f2;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #ffffff;
+}
